k8s/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-demo-devops-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-demo-devops-v1
  template:
    metadata:
      labels:
        app: app-demo-devops-v1
    spec:
      containers:
        - name: container-demo-devops-v1
          image: demo-devops:v1.0
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-demo-devops-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-demo-devops-v2
  template:
    metadata:
      labels:
        app: app-demo-devops-v2
    spec:
      containers:
        - name: container-demo-devops-v2
          image: demo-devops:v2.0
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
