k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-devops-v1
spec:
  selector:
    app: app-demo-devops-v1
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-demo-devops-v2
spec:
  selector:
    app: app-demo-devops-v2
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  type: NodePort
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
